[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/util/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/Main.gd" type="Script" id=2]
[ext_resource path="res://assets/Bonus/sfx_twoTone.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/Bonus/kenvector_future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/util/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/util/Transition.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "load"
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 276, 1230 ), Vector2( 276, 900 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/MovingParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 276, 1230 ), Vector2( 276, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/MovingParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_bottom = 361.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][rainbow freq=0.2 sat=10 val=20]
Space Invaders
[/rainbow][/center]"
text = "
Space Invaders
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -25.0
margin_right = 125.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 250.0
margin_bottom = 158.0

[node name="StartGame" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
text = "Start Game"

[node name="Options" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 54.0
margin_bottom = 104.0
disabled = true
text = "OPTIONS"

[node name="Leaderboard" parent="CenterContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 108.0
margin_bottom = 158.0
disabled = true
text = "Leaderboard"

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 276, 1230 )

[node name="MovingParticles" parent="Player" index="2"]
emitting = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "load"
anims/load = SubResource( 2 )
anims/start = SubResource( 3 )

[node name="Transition" parent="." instance=ExtResource( 7 )]

[node name="Node2D" type="Node2D" parent="."]
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Player"]
